# analyzer

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  settings.gradle  start.sh  test.py  test.sh
.github/workflows/: black.yml  ci.yml  pylint.yml
.zed/: tasks.json
analyzer/: .gitignore  README.md  build.gradle  run-console-frontend.sh  settings.gradle
analyzer/app/: build.gradle
analyzer/benchmark/: .gitignore  benchmark.py  build.gradle
analyzer/console-app/: build.gradle
analyzer/core/: build.gradle
analyzer/drain-java-core/: build.gradle.kts
analyzer/gradle/: libs.versions.toml
benchmark/: .gitignore  benchmark.py  build.gradle  evaluator.py  into_tex_table.py
configs/: dummy.txt
differ/: build.gradle  test2.txt
docs/presentation/: gulpfile.js  index.html
docs/thesis/: .gitignore  Makefile  mag.bib  main.aux  main.bbl  main.bcf  main.blg  main.dvi  main.lof  main.lot  main.out  main.run.xml  main.tex  main.toc  pginz.cls
e2e-tests/: build.gradle  into_tex_report.py  test.py
gradle/: libs.versions.toml
legacy-analyzer/: README.md  pyproject.toml  start.sh  test.py
legacy-analyzer/src/: itertools.py
sample-logs/end_of_log_removed/: checked.txt
sample-logs/middle_of_log_removed/: checked.txt
sample-logs/multiple_random_inserts/: config.toml
sample-logs/one_line_changed/: config.toml
scripts/: config.json  generator.py
scripts/output/: log1.txt  log2.txt
src/: consts.py  itertools.py  test_itertools.py  utils.py  view.py  widgets.py
src/helpers/: parser_setup_facade.py
workdir/: README.md
(+157 files in other folders)
