[tool.poetry]
name = "analyzer"
version = "0.1.0"
description = ""
authors = ["Mateusz Mazur <mateusz.mazur@e.email>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
nicegui = "^1.4.1"
drain3 = "^0.9.11"
marshmallow = "^3.20.1"
blinker = "^1.6.3"
toml = "^0.10.2"
python-dateutil = "^2.8.2"
pytest = "^7.4.3"
black = "^23.10.1"
scipy = "^1.11.3"
numpy = "^1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
